content/static/css: constrain fixed position hack to mobile Safari
overflow: auto was fixing an issue relating to the overflow menu
in the fixed header on iOS, but was causing a bunch of other issues.
Notably, the scrollbar was underneath the fixed header and anchor
links did not behave as expected. Only set this on mobile Safari
(where these issues don’t present themselves; I’m sure others will
pop up but they’re at least restricted to mobile Safari).

Updates golang/go#40504
Fixes golang/go#40552
Fixes golang/go#40556

Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/246478
Run-TryBot: Andrew Bonventre <andybons@golang.org>
TryBot-Result: kokoro <noreply+kokoro@google.com>

--- a/content/static/css/stylesheet.css
+++ b/content/static/css/stylesheet.css
@@ -39,11 +39,12 @@
 html,
 body {
   /**
-   * Prevent jitter when focusing within fixed elements on iOS.
+   * This is used to programatically detect whether overflow needs to be altered
+   * to prevent jitter when focusing within fixed elements on iOS.
+   * It also must be set to 'touch' for the fix to work.
    */
   -webkit-overflow-scrolling: touch;
   height: 100%;
-  overflow: auto;
 }
 body {
   color: var(--gray-1);
